# symo

./: .ackrc  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: design.md
docs-template/: README.md  design.md
model/: base-nodes.yaml  base-relations.yaml  base-relationships.yaml  symo-diagrams.yaml  symo-nodes.yaml
src/: lib.rs  main.rs  model.rs  node.rs  output.rs  relation.rs  relationship.rs  serve.rs  watch.rs
tests/: docs.rs
tests/data-model/: diagrams.yaml  nodes.yaml  relations.yaml
tests/data-output/: sample1.md  sample2.md
tests/data-template/: sample1.md  sample2.md
