[package]
name = "symo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "*"
axum = "*"
clap = { version = "*", features = ["derive"] }
handlebars = "*"
notify = "*"
notify-debouncer-mini = { version = "*", default-features = false }
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
tokio = { version = "*", features = ["full"] }
tower = "*"
tower-http = { version = "*", features = ["fs"] }
walkdir = "*"
